fixe dbug on ie8 login form

--- a/public/stylesheets/topics.css
+++ b/public/stylesheets/topics.css
@@ -132,7 +132,7 @@ aside section.need-help{padding:13px 0;text-align:center}
 
 a.has_comments{padding: 0 6px 2px 6px; background: url('../images/icn-plus-minus.png') no-repeat; font-weight: bold; border: none; text-decoration: none;}
 a.minus{background-position: 0 -19px;}
-.hidden{display: none;}                                 
+
 
 a.no_comments{padding: 0 6px; border-width: 1px; border-style: solid; margin-left: 4px; font-weight: bold;
   border-radius: 3px;
